# csad2025KI409YaremiiKyrylo25

./: CMakeLists.txt  ci.bat  ci.sh  math_operations.cpp  math_operations.h
.github/workflows/: ci.yml
tests/: unit_tests.cpp
